--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE HTML>
 <html>
-<meta charset="utf-8">
-<link href="style.css" rel="stylesheet"/>
-<script src="app.js"></script>
 <head>
-    <title>idoc's page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=360">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
+    <style type="text/css">
+        body {
+            font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+            margin:0px;
+        }
+        .top-bar {
+            position:relative;
+            background-color:#616161;
+            width:100%;
+            height:50px;
+            margin-left:auto;
+            margin-right:auto;
+        }
+        #idoc-text {
+            text-align:center;
+            color:#ffffff;
+            font-weight:200;
+            line-height:50px;
+        }
+    </style>
 </head>
+<title>아이폰 수리는 iDoc</title>
+
 <body>
-<h1>This page is idoc's github page</h1>
+<div class="top-bar">
+    <div id="idoc-text"> iDoc</div>
+
+</div>
 </body>
 </html>
